<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="user_hint">QQ号码/手机/邮箱</string>
    <string name="password_hint">密码</string>
    <string name="regist">注册账号</string>
    <string name="find">找回密码</string>
    <string name="remember">记住密码</string>
    <string name="login">自动登录</string>
    <string name="desc">gagaga</string>
    <string name="submit">登陆</string>
    <string name="title_activity_result">ResultActivity</string>

</resources>